Final submission to thesis project and latex

--- a/thesis/frontmatter/abbrev.tex
+++ b/thesis/frontmatter/abbrev.tex
@@ -2,8 +2,51 @@
 \section{Abbreviations}
 
 \begin{acronym}
+    \acro{API}{Application Program Interface}
+    \acro{AWOL}{Absence Without Official Leave}
+    \acro{BFT}{Byzantine Fault Tolerance}
+    \acro{CA}{Certificate Authority}
+    \acro{CFT}{Crash Fault Tolerant}
+    \acro{CID}{Content Identifier}
+    \acro{DAC}{Decentralized Autonomous Corporation}
+    \acro{DAG}{Directed Acyclic Graph}
+    \acro{DAO}{Decentralized Autonomous Organization}
+    \acro{DAPP}{Decentralized Application}
+    \acro{DeFi}{Decentralized Finance}
+    \acro{DFS}{Distributed File System}
+    \acro{DLT}{Distributed Ledger Technology}
+    \acro{DMS}{Data Management System}
+    \acro{DSL}{Domain-specific Language}
+    \acro{EEA}{European Economic Area}
+    \acro{EIP}{Ethereum Improvement Proposals}
+    \acro{ERC}{Ethereum Request for Comments}
+    \acro{EHR}{Electronic Health Records}
+    \acro{ETH}{Ethereum Cryptocurrency token}
     \acro{FT}{Fungible Token}
+    \acro{GDPR}{Gross Domestic Product}
+    \acro{IPFS}{Interplanetary File System}
+    \acro{IT}{Information Technology}
+    \acro{IoT}{Internet of Things}
+    \acro{KB}{KiloByte}
+    \acro{KYC}{Know Your Customer}
+    \acro{MPA}{Multi-party authorization} 
     \acro{NFT}{Non Fungible Token}
+    \acro{Nonce}{Number only used once}
+    \acro{OS}{Operating System}
+    \acro{PBFT}{Practical Byzantine Fault Tolerance}
+    \acro{PKI}{Public Key Infrastructure}
+    \acro{PoA}{Proof of Authority}
+    \acro{PoET}{Proof of Elapsed Time}
+    \acro{PoS}{Proof of Stake}
+    \acro{PoW}{Proof of Work}
+    \acro{P2P}{Peer-to-Peer}
+    \acro{REST}{Representational State Transfer}
+    \acro{TB}{TeraByte}
+    \acro{TCG}{Trading Card Game}
+    \acro{UAV}{Unmanned Aerial Vehicle}
+    \acro{UI}{User Interface}
+    \acro{USD}{United States Dollar}
+    \acro{WSL}{Windows Subsystem for Linux}
 \end{acronym}
 
     
