--- a/thesis/frontmatter/ack.tex
+++ b/thesis/frontmatter/ack.tex
@@ -2,5 +2,11 @@
 
 \acknowledgements
 
-I would like to thank my supervisors for their enthusiasm and help with writing this thesis. 
+I would like to thank my supervisor, Chunming Ron and Jiahui Geng  for their guidance, contribution and help in the elaboration of this thesis project.
+
+Family, friends and colleagues for their support and patience.
+
+Finally, my gratitude to the University of Stavanger and the possibility to work on this topic.
+
+
 
