--- a/thesis/frontmatter/abstract.tex
+++ b/thesis/frontmatter/abstract.tex
@@ -1,26 +1,15 @@
 %!TEX root = ../main.tex
 
 \abstract
-Distributed database systems in the Blockchain are an emerging technology aiming to provide users with the required tools to perform tasks and computations without an intermediate entity, to build self-trust systems where the rules are agreed upon beforehand and set the basis for a universal ecosystem. Users can then interact democratically and ensure that the committed transactions will be immutable truthful, confident, and non-reTpudiable.
-The most famous case of a worldwide distributed blockchain system is Bitcoin. 
 
-By the time this work is written, bitcoin had demonstrated robustness, reliability, and proof that new ways of trust/collaboration can be built on the Internet over 14 years (since its implementation in 2019) to remediate the economic boundaries that banks are still unable to solve.
+Today, the global economy is dependent on the Internet and computational resources. Although they are tightly interconnected, it is difficult to evaluate their degree of interdependence. 
+Keeping up with the pace of technology can be a challenging task, mainly when updating the hardware and software infrastructure. Every day, corporations and governments are faced with this issue; most have been victims of cyber attacks, security breaches, and data leaks. The consequences are significant in monetary losses; damage remediation is unattainable, even impossible, in certain circumstances. The repercussions might include reputational damage, legal responsibility, and threats to national security (when attacks are carried out against critical infrastructures to control the resources of a country), to name a few.
+Similarly, data has become such an integral part of many industries that it is one of the most critical targets for attackers that often is encrypted by ransomware, stolen, or corrupted. Without data, many companies are not be able to continue operating as they do. 
+The combination of all these factors complicates the ability of organizations to cooperate, trust, and share information in efforts to research and develop solutions for industry and government.
+\newline
 
-[CITATION REQUIRED] 
+A promising technology can assist in significantly reducing the damage caused by the security threats outlined above: Blockchain technology has proven to be one of the most promising inventions of the twenty-first century for transmitting and protecting information while offering high reliability and availability, low exposure to attacks, protected encrypted data, and accessible to the entities willing to participate.
+Blockchain enabled the possibility to embed immutable data and compiled source code known as ‘smart contract’ where certain rules can be programmed to create business workflows. 
 
-
-To enable a self trusted system, the Bitcoin standard implemented in its technology a proto-scripting language where all participants agree upon a set of base rules such as:
-A maximum capital of 21,000,000 bitcoins will ever exist.
-During the first 210,000 blocks, each block produced 50 bitcoins (approximately every 10 minutes).
-After the first 210,000 blocks, the number of Bitcoins generated will halve to 25 bitcoins (the number keeps halving approximately every four years), with the last Bitcoin generated somewhere in 2140.
-This new economic agreement aims to generate a deflationary economy. The currency's value will likely increase over time (emulating scarce resources). 
-The proto scripting language generated two concepts of ecnomic tokenization and usability:
-
-Many projects are emerging from the original idea of Blockchain, specially created to remediate the economic boundaries that banks are still unable to solve. New standards for code as a "proof of trust" created the possibility to develop and compile source code in the blockchain (better known as smart contracts). 
-
- however, little has been researched so far for its application in the industry, where supply chain and 
-
-  and the basis for different projects 
-Industries can nowadays benefit from blockchain systems to record and track data in more trustful ways and allow cooperation. However, the problem of privacy, ownership, and security emerges when trying to implement such systems. In this thesis project, a schema and system design is proposed to record unique ownership of certain assets in the blockchain (datasets ownership) and provide the infrastructure to allow its usage or deny it depending on the agreements of the system through the issuance of NFT's for specific datasets.
-
-
+\newline
+This thesis report proposes a Blockchain-based infrastructure solution provided by  "Hyperledger Fabric" technology for companies to securely transmit and share information using the latest encryption and data storage technologies operating on the model of distributed systems and smart contracts. By presenting unique digital assets as Non-Fungible Tokens (NFT), the infrastructure is able to trust the integrity of the data, while protecting it from counterfeiting. Through the use of a Blockchain-based file storage system known as IPFS, and by connecting all the relevant elements together through a web-based application, it is possible to demonstrate that the implementation of such systems is feasible, highly scalable and a useful tool that many organizations can utilize to create new work systems and workflows for digital asset management.
