--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -1,25 +1,60 @@
+%!TEX TS-program = xelatex
+
 \documentclass[12pt]{report}
 \usepackage[english]{babel}
-\usepackage[utf8]{inputenc}
 \usepackage{uis-thesis} % Options: print
-\usepackage{natbib}
-\documentclass{article}
 \usepackage[colorlinks]{hyperref}
+\usepackage[utf8]{inputenc}
+\usepackage{natbib}
 \usepackage[printonlyused,withpage]{acronym}
+\usepackage{refcount}% required for \getpagerefnumber
+\usepackage{xr}% required to reference labels in external documents
+\usepackage{listings}
+\usepackage{color}
+
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
+    pdftitle={Overleaf Example},
+    pdfpagemode=FullScreen,
+    }
+
+\lstset{frame=tb,
+  language=Java,
+  aboveskip=3mm,
+  belowskip=3mm,
+  showstringspaces=false,
+  columns=flexible,
+  basicstyle={\small\ttfamily},
+  numbers=none,
+  numberstyle=\tiny\color{gray},
+  keywordstyle=\color{blue},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{mauve},
+  breaklines=true,
+  breakatwhitespace=true,
+  tabsize=3
+}
 
 
 % UiS recommends Georgia for the body text, but you are free to use another
-% font for the body text; if you want to use another font just remove this line.
+% font for the body text; if you want to use another font just e this line.
 \setmainfont{Georgia}
 
 % Optional: specify path to photo
 %\photo{photos/ide}
 % Optional: credit the photographer; required for many photos; you must check
 %\photocredit{Hein Meling}
-\title{NFT as a proof of Digital Ownership-reward system integrated to a Secure Distributed Computing system Managed by Blockchain}
+\title{NFT as a proof of Digital Ownership-reward system integrated to a Secure Distributed Computing Blockchain Framework}
 \authors{Asahi Cantu}
 \department{ide}
-\date{January 2022}
+\date{June 2022}
 
 % Optional: uncomment if you want to display faculty name as well
 \faculty{tn}
@@ -39,41 +74,65 @@
 % Values: 1-9 select different color schemes, 10 for draft versions (to save ink)
 \uiscover{4}
 \frontmatter
-    \pagestyle{empty}
-    \declaration
-    
-    \input{frontmatter/quote}
-    \input{frontmatter/abstract}
-    \input{frontmatter/ack}
+\pagestyle{empty} 
+\declaration
 
-    \tableofcontents
+\input{frontmatter/quote}
+\input{frontmatter/abstract}
+\input{frontmatter/ack}
 
-    \input{frontmatter/abbrev}
+\tableofcontents
+
+\input{frontmatter/abbrev}
     % \input{frontmatter/symbols}
 %-----------------------------------------------------------------
-\mainmatter	  % Begin normal, numeric (1,2,3...) page numbering
-    \input{chapters/00-intro}
-    \input{chapters/01-related}
-    \input{chapters/02-approach}
-    \input{chapters/03-eval}
-    \input{chapters/04-discussion}
-    \input{chapters/05-conclusions}
+\mainmatter
+% Begin normal, numeric (1,2,3...) page numbering
+\input{chapters/00-intro/00-intro-00-main}
+\input{chapters/00-intro/00-intro-01-background}
+\input{chapters/00-intro/00-intro-02-objectives}
+\input{chapters/00-intro/00-intro-03-approach}
+\input{chapters/00-intro/00-intro-04-outline}
 
+\input{chapters/01-related/01-related-00-Main}
+\input{chapters/01-related/01-related-01-Blockchain}
+\input{chapters/01-related/01-related-02-Hyperledger}
+\input{chapters/01-related/01-related-03-IPFS}
+\input{chapters/01-related/01-related-04-SimilarSystems}
+
+\input{chapters/02-approach/02-approach-00-main}
+\input{chapters/02-approach/02-approach-01-intro-00-main}
+\input{chapters/02-approach/02-approach-01-intro-01-blockchain}
+\input{chapters/02-approach/02-approach-01-intro-02-SmartContracts}
+\input{chapters/02-approach/02-approach-01-intro-03-Hyperledger}
+\input{chapters/02-approach/02-approach-01-intro-04-IPFS}
+
+\input{chapters/02-approach/02-approach-02-existing-00-main}
+\input{chapters/02-approach/02-approach-03-analysis-00-main}
+\input{chapters/02-approach/02-approach-04-proposed-00-main} 
+
+
+\input{chapters/03-eval/03-eval-00-main}
+\input{chapters/04-discussion/04-discussion-00-main}
+\input{chapters/05-conclussions/05-conclusions-00-main}
 %-----------------------------------------------------------------
 % Now begin the Appendices, including them as separate files
 
-% \listoffigures
+\listoffigures
 % \listoftables
 
 \appendix
-%\input{appendices/instructions}
+\input{appendices/00-apx-main}
+\newpage
+\input{appendices/01-apx-nft}
 
 %-----------------------------------------------------------------
  \backmatter
-     \label{Bibliography}
-     \lhead{\emph{Bibliography}}  % Change the left side page header to "Bibliography"
-      \bibliographystyle{unsrtnat}  % Use the "unsrtnat" BibTeX style for formatting the Bibliography
-      \bibliography{Bibliography}  % The references (bibliography) information are stored in the file named "Bibliography.bib"
+ \label{Bibliography}
+ %\lhead{\emph{Bibliography}}
+ % Change the left side page header to "Bibliography"
+  \bibliographystyle{unsrtnat}  % Use the "unsrtnat" BibTeX style for formatting the Bibliography
+  \bibliography{Bibliography}  % The references (bibliography) information are stored in the file named "Bibliography.bib"
 
 \uisbackcover
 \end{document}
