Final thesis submission and changes

--- a/thesis/appendices/00-apx-main.tex
+++ b/thesis/appendices/00-apx-main.tex
@@ -6,6 +6,7 @@
 \label{FileRep}
 The repository with the code to download the system and perform the simulation is available at:
 \url{https://github.com/asahicantu/NFT-Thesis}.
+The repository file includes a video sequence showing the sames steps explained in \ref{ch:eval} to perform a simulation.
 
  \begin{figure}[!h]
         \centering
