--- a/thesis/frontmatter/abbrev.tex
+++ b/thesis/frontmatter/abbrev.tex
@@ -8,6 +8,7 @@
     \acro{CA}{Certificate Authority}
     \acro{CFT}{Crash Fault Tolerant}
     \acro{CID}{Content Identifier}
+    \acro{CPU}{Central Processing Unit}
     \acro{DAC}{Decentralized Autonomous Corporation}
     \acro{DAG}{Directed Acyclic Graph}
     \acro{DAO}{Decentralized Autonomous Organization}
@@ -17,18 +18,19 @@
     \acro{DLT}{Distributed Ledger Technology}
     \acro{DMS}{Data Management System}
     \acro{DSL}{Domain-specific Language}
-    \acro{EEA}{European Economic Area}
     \acro{EIP}{Ethereum Improvement Proposals}
     \acro{ERC}{Ethereum Request for Comments}
     \acro{EHR}{Electronic Health Records}
     \acro{ETH}{Ethereum Cryptocurrency token}
     \acro{FT}{Fungible Token}
-    \acro{GDPR}{Gross Domestic Product}
     \acro{IPFS}{Interplanetary File System}
     \acro{IT}{Information Technology}
     \acro{IoT}{Internet of Things}
+    \acro{IPS}{Instructions Per Second}
+    \acro{kB}{KiloByte}
     \acro{KB}{KiloByte}
     \acro{KYC}{Know Your Customer}
+    \acro{MiB}{Mebibyte}
     \acro{MPA}{Multi-party authorization} 
     \acro{NFT}{Non Fungible Token}
     \acro{Nonce}{Number only used once}
@@ -41,8 +43,10 @@
     \acro{PoW}{Proof of Work}
     \acro{P2P}{Peer-to-Peer}
     \acro{REST}{Representational State Transfer}
+    \acro{s}{Seconds}
     \acro{TB}{TeraByte}
     \acro{TCG}{Trading Card Game}
+    \acro{TPS}{Transactions Per Second}
     \acro{UAV}{Unmanned Aerial Vehicle}
     \acro{UI}{User Interface}
     \acro{USD}{United States Dollar}
