--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -119,7 +119,7 @@
 % Now begin the Appendices, including them as separate files
 
 \listoffigures
-% \listoftables
+\listoftables
 
 \appendix
 \input{appendices/00-apx-main}
